--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,14 @@
             <a class="text-gray-800 font-bold text-4xl" href="/">Emotion Recognition</a>
             <div class="space-x-4">
                 <a class="text-gray-800 hover:text-gray-500 text-xl" href="/">Home</a>
-                <a class="text-gray-800 hover:text-gray-500 text-xl" href="/emotion_recognition">Emotion Recognition</a>
+                <a class="text-gray-800 hover:text-gray-500 text-xl" href="/detection">Emotion Recognition</a>
                 <a class="text-gray-800 hover:text-gray-500 text-xl" href="/article">Article</a>
             </div>
         </div>
     </nav>
 
     <!-- Page Content -->
-    <div class="container mx-auto mt-8">
+    <div class="container mx-auto mt-5">
         {% block content %}{% endblock %}
     </div>
 
