--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
                  alt="Emotion Recognition"
                  class="w-[700px] h-auto max-w-full">
         </div>
-        <div></div>
+        <div class="px-5"></div>
         <!-- Bagian Teks -->
         <div class="flex items-center justify-center">
             <div class="">
@@ -20,7 +20,7 @@
                     <h2 class="text-4xl font-semibold text-gray-700">To the Emotion Recognition Web App</h2>
                 </div>
                 <div>
-                    <a href="/emotion_recognition" class="mt-6 inline-block bg-gray-700 hover:bg-gray-300 text-white py-2 px-4 rounded-lg transition">Start Analysis</a>
+                    <a href="/detection" class="mt-6 inline-block bg-gray-700 hover:bg-gray-300 text-white py-2 px-4 rounded-lg transition">Start Analysis</a>
                     <a href="#learn_more" class="mt-6 inline-block bg-yellow-300 hover:bg-gray-100 text-gray-700 px-4 py-2 rounded-lg transition">Learn More</a>
                 </div>
             </div>
